--- a/pages/10203.html
+++ b/pages/10203.html
@@ -312,18 +312,64 @@ margin-left: 0em;
 <li><a href='https://web.math.princeton.edu/~seri/homepage/'>webpage</a></li>
 </ul>
 
+<h2 id='writings'>Writings</h2>
+
+<p>lecture notes on <a class='existingWikiWord' href='/nlab/show/functional+analysis'>functional analysis</a>:</p>
+
+<ul>
+<li><em>Lecture notes in analysis</em>, 2011 (<a href='https://web.math.princeton.edu/~seri/homepage/courses/Analysis2011.pdf'>pdf</a>)</li>
+</ul>
+
+<h2 id='related_lab_entries'>Related <math class='maruku-mathml' display='inline' id='mathml_2aafdda17d68cfe98250414cfff11e1d3134d162_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>Lab entries</h2>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/functional+analysis'>functional analysis</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/distribution'>distribution</a></p>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/compactly+supported+distribution'>compactly supported distribution</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/support+of+a+distribution'>support of a distribution</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/tensor+product+of+distributions'>tensor product of distributions</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Fourier+transform+of+distributions'>Fourier transform of distributions</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/fundamental+solution'>fundamental solution</a></p>
+</li>
+</ul>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/wave+equation'>wave equation</a></p>
+</li>
+</ul>
+
 <p><div class='property'> category: <a class='category_link' href='/nlab/list/people'>people</a></div></p>
 </div>
 
 <div class="revisedby">
-  Created on August 12, 2013 14:25:05 
+  Revised on October 23, 2017 11:09:20 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (89.204.130.218)
+  (188.109.127.172)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Sergiu+Klainerman" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
+  <a href="/nlab/edit/Sergiu+Klainerman" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Sergiu+Klainerman/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/Sergiu+Klainerman" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Sergiu+Klainerman" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
