--- a/pages/4089.html
+++ b/pages/4089.html
@@ -339,7 +339,7 @@ margin-left: 0em;
 
 <ul>
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/locally+convex+space'>locally convex topological vector space</a></p>
+<p><a class='existingWikiWord' href='/nlab/show/locally+convex+topological+vector+space'>locally convex topological vector space</a></p>
 </li>
 
 <li>
@@ -451,27 +451,53 @@ margin-left: 0em;
 <p><strong>A Bibliography for <a class='existingWikiWord' href='/nlab/show/functional+analysis'>Functional Analysis</a> Entries</strong></p>
 
 <ul id='KM'>
-<li>Walter Rudin, <em>Functional analysis</em></li>
+<li>
+<p>Walter Rudin, <em>Functional analysis</em></p>
+</li>
 
-<li>A. A. Kirillov, A. D. Gvišiani, Теоремы и задачи функционального анализа (theorems and exercises in functional analysis), Moskva, Nauka 1979, 1988</li>
+<li>
+<p>A. A. Kirillov, A. D. Gvišiani, Теоремы и задачи функционального анализа (theorems and exercises in functional analysis), Moskva, Nauka 1979, 1988</p>
+</li>
 
-<li>A. Ya. Helemskii, <em>Lectures and exercises on functional analysis</em> (pretty categorical point of view!) Translations of Math. Monographs <strong>233</strong> (AMS 2006)</li>
+<li>
+<p>A. Ya. Helemskii, <em>Lectures and exercises on functional analysis</em> (pretty categorical point of view!) Translations of Math. Monographs <strong>233</strong> (AMS 2006)</p>
+</li>
 
-<li>K. Yosida, <em>Functional analysis</em></li>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Sergiu+Klainerman'>Sergiu Klainerman</a>, <em>Lecture notes in analysis</em>, 2011 (<a href='https://web.math.princeton.edu/~seri/homepage/courses/Analysis2011.pdf'>pdf</a>)</p>
+</li>
 
-<li>H. H. Schaefer, <em>Topological vector spaces</em>, GTM 3, Springer.</li>
+<li>
+<p>K. Yosida, <em>Functional analysis</em></p>
+</li>
 
-<li>Gottfried Köthe, <em>Topological vector spaces</em>, (two volumes)</li>
+<li>
+<p>H. H. Schaefer, <em>Topological vector spaces</em>, GTM 3, Springer.</p>
+</li>
 
-<li>Nelson Dunford, Jacob T Schwartz, <em>Linear operators, spectral theory, self adjoint operators in Hilbert space</em> (Part 2) (1967, paperback 1988). Wiley.</li>
+<li>
+<p>Gottfried Köthe, <em>Topological vector spaces</em>, (two volumes)</p>
+</li>
 
-<li>R. Kadison, <em>Introduction to operator algebras</em></li>
+<li>
+<p>Nelson Dunford, Jacob T Schwartz, <em>Linear operators, spectral theory, self adjoint operators in Hilbert space</em> (Part 2) (1967, paperback 1988). Wiley.</p>
+</li>
 
-<li>Gerald B. Folland, <em>A course in abstract harmonic analysis</em>, Studies in Advanced Mathematics. CRC Press, Boca Raton, FL, 1995. x+276 pp. <a href='http://books.google.com/books?hl=en&amp;lr=&amp;id=0VwYZI1DypUC'>gBooks</a></li>
+<li>
+<p>R. Kadison, <em>Introduction to operator algebras</em></p>
+</li>
 
-<li>Zbigniew Semadeni, <em>Banach spaces of continuous functions</em>, vol. I, <a href='http://books.google.com/books/about/Banach_spaces_of_continuous_functions.html?id=vCDvAAAAMAAJ'>gBooks</a></li>
+<li>
+<p>Gerald B. Folland, <em>A course in abstract harmonic analysis</em>, Studies in Advanced Mathematics. CRC Press, Boca Raton, FL, 1995. x+276 pp. <a href='http://books.google.com/books?hl=en&amp;lr=&amp;id=0VwYZI1DypUC'>gBooks</a></p>
+</li>
 
-<li>Andreas Kriegl, Peter Michor, <em>The convenient setting of global analysis</em> (free download <a href='http://www.ams.org/publications/online-books/surv53-index'>here</a>)</li>
+<li>
+<p>Zbigniew Semadeni, <em>Banach spaces of continuous functions</em>, vol. I, <a href='http://books.google.com/books/about/Banach_spaces_of_continuous_functions.html?id=vCDvAAAAMAAJ'>gBooks</a></p>
+</li>
+
+<li>
+<p>Andreas Kriegl, Peter Michor, <em>The convenient setting of global analysis</em> (free download <a href='http://www.ams.org/publications/online-books/surv53-index'>here</a>)</p>
+</li>
 </ul>
 
 <ul>
@@ -492,14 +518,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on September  7, 2017 16:09:45 
+  Revised on October 23, 2017 11:03:34 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (192.41.132.183)
+  (188.109.127.172)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/functional+analysis+bibliography" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/functional+analysis+bibliography/4" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(4 revisions)</span> | <a href="/nlab/show/diff/functional+analysis+bibliography" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/functional+analysis+bibliography" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/functional+analysis+bibliography" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/functional+analysis+bibliography/5" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(5 revisions)</span> | <a href="/nlab/show/diff/functional+analysis+bibliography" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/functional+analysis+bibliography" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
