--- a/pages/6050.html
+++ b/pages/6050.html
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -470,16 +470,16 @@ margin-left: 0em;
 <div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#properties'>Properties</a><ul><li><a href='#fundamental_solution'>Fundamental solution</a></li><li><a href='#bicharacteristic_flow_and_propagation_of_singularities'>Bicharacteristic flow and propagation of singularities</a></li></ul></li><li><a href='#related_concepts'>Related concepts</a></li><li><a href='#references'>References</a></li></ul></div>
 <h2 id='idea'>Idea</h2>
 
-<p>For <math class='maruku-mathml' display='inline' id='mathml_53b7391dc7138888196fe3120d4c9bc07d17701f_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mi>X</mi><mo>,</mo><mi>g</mi><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>(X,g)</annotation></semantics></math> a <a class='existingWikiWord' href='/nlab/show/pseudo-Riemannian+manifold'>pseudo-Riemannian manifold</a> and <math class='maruku-mathml' display='inline' id='mathml_53b7391dc7138888196fe3120d4c9bc07d17701f_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo>□</mo><mo>:</mo><msup><mi>C</mi> <mn>∞</mn></msup><mo stretchy='false'>(</mo><mi>X</mi><mo stretchy='false'>)</mo><mo>→</mo><msup><mi>C</mi> <mn>∞</mn></msup><mo stretchy='false'>(</mo><mi>X</mi><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>\Box : C^\infty(X) \to C^\infty(X)</annotation></semantics></math> its <a class='existingWikiWord' href='/nlab/show/Laplace+operator'>Laplace operator</a>, the <strong>wave equation</strong> on <math class='maruku-mathml' display='inline' id='mathml_53b7391dc7138888196fe3120d4c9bc07d17701f_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>X</mi></mrow><annotation encoding='application/x-tex'>X</annotation></semantics></math> is the <a class='existingWikiWord' href='/nlab/show/differential+equation'>differential equation</a></p>
-<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_53b7391dc7138888196fe3120d4c9bc07d17701f_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mo>□</mo> <mi>g</mi></msub><mi>f</mi><mo>=</mo><mn>0</mn><mspace width='thinmathspace'></mspace><mo>.</mo></mrow><annotation encoding='application/x-tex'>
+<p>For <math class='maruku-mathml' display='inline' id='mathml_2e85f10de0f8ffe34ffae14a463be468b8068fde_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mi>X</mi><mo>,</mo><mi>g</mi><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>(X,g)</annotation></semantics></math> a <a class='existingWikiWord' href='/nlab/show/pseudo-Riemannian+manifold'>pseudo-Riemannian manifold</a> and <math class='maruku-mathml' display='inline' id='mathml_2e85f10de0f8ffe34ffae14a463be468b8068fde_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo>□</mo><mo>:</mo><msup><mi>C</mi> <mn>∞</mn></msup><mo stretchy='false'>(</mo><mi>X</mi><mo stretchy='false'>)</mo><mo>→</mo><msup><mi>C</mi> <mn>∞</mn></msup><mo stretchy='false'>(</mo><mi>X</mi><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>\Box : C^\infty(X) \to C^\infty(X)</annotation></semantics></math> its <a class='existingWikiWord' href='/nlab/show/Laplace+operator'>Laplace operator</a>, the <strong>wave equation</strong> on <math class='maruku-mathml' display='inline' id='mathml_2e85f10de0f8ffe34ffae14a463be468b8068fde_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>X</mi></mrow><annotation encoding='application/x-tex'>X</annotation></semantics></math> is the <a class='existingWikiWord' href='/nlab/show/differential+equation'>differential equation</a></p>
+<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_2e85f10de0f8ffe34ffae14a463be468b8068fde_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mo>□</mo> <mi>g</mi></msub><mi>f</mi><mo>=</mo><mn>0</mn><mspace width='thinmathspace'></mspace><mo>.</mo></mrow><annotation encoding='application/x-tex'>
   \Box_g f = 0
   \,.
 
 </annotation></semantics></math></div>
-<p>where <math class='maruku-mathml' display='inline' id='mathml_53b7391dc7138888196fe3120d4c9bc07d17701f_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mo>□</mo> <mi>g</mi></msub></mrow><annotation encoding='application/x-tex'>\Box_g</annotation></semantics></math> denotes the <em>wave operator</em> /<a class='existingWikiWord' href='/nlab/show/Laplace+operator'>Laplace operator</a>, a <a class='existingWikiWord' href='/nlab/show/hyperbolic+differential+operator'>hyperbolic differential operator</a>.</p>
+<p>where <math class='maruku-mathml' display='inline' id='mathml_2e85f10de0f8ffe34ffae14a463be468b8068fde_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mo>□</mo> <mi>g</mi></msub></mrow><annotation encoding='application/x-tex'>\Box_g</annotation></semantics></math> denotes the <em>wave operator</em> /<a class='existingWikiWord' href='/nlab/show/Laplace+operator'>Laplace operator</a>, a <a class='existingWikiWord' href='/nlab/show/hyperbolic+differential+operator'>hyperbolic differential operator</a>.</p>
 
-<p>For <math class='maruku-mathml' display='inline' id='mathml_53b7391dc7138888196fe3120d4c9bc07d17701f_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>m</mi><mo>∈</mo><mi>ℝ</mi></mrow><annotation encoding='application/x-tex'>m \in \mathbb{R}</annotation></semantics></math> the inhomogoenous equation</p>
-<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_53b7391dc7138888196fe3120d4c9bc07d17701f_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mo>□</mo> <mi>g</mi></msub><mi>f</mi><mo>=</mo><msup><mi>m</mi> <mn>2</mn></msup><mi>f</mi></mrow><annotation encoding='application/x-tex'>
+<p>For <math class='maruku-mathml' display='inline' id='mathml_2e85f10de0f8ffe34ffae14a463be468b8068fde_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>m</mi><mo>∈</mo><mi>ℝ</mi></mrow><annotation encoding='application/x-tex'>m \in \mathbb{R}</annotation></semantics></math> the inhomogoenous equation</p>
+<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_2e85f10de0f8ffe34ffae14a463be468b8068fde_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mo>□</mo> <mi>g</mi></msub><mi>f</mi><mo>=</mo><msup><mi>m</mi> <mn>2</mn></msup><mi>f</mi></mrow><annotation encoding='application/x-tex'>
   \Box_g f = m^2 f
 
 </annotation></semantics></math></div>
@@ -531,6 +531,10 @@ margin-left: 0em;
 <li id='Ginoux08'>
 <p><a class='existingWikiWord' href='/nlab/show/Nicolas+Ginoux'>Nicolas Ginoux</a>, <em>Linear wave equations</em>, Ch. 3 in <a class='existingWikiWord' href='/nlab/show/Christian+B%C3%A4r'>Christian Bär</a>, <a class='existingWikiWord' href='/nlab/show/Klaus+Fredenhagen'>Klaus Fredenhagen</a>, <em>Quantum Field Theory on Curved Spacetimes: Concepts and Methods</em>, Lecture Notes in Physics, Vol. 786, Springer, 2009</p>
 </li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Sergiu+Klainerman'>Sergiu Klainerman</a>, part III of <em>Lecture notes in analysis</em>, 2011 (<a href='https://web.math.princeton.edu/~seri/homepage/courses/Analysis2011.pdf'>pdf</a>)</p>
+</li>
 </ul>
 
 <p>
@@ -541,14 +545,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on August  4, 2017 15:46:43 
+  Revised on October 23, 2017 11:08:36 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (94.220.75.2)
+  (188.109.127.172)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/wave+equation" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/wave+equation/9" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(9 revisions)</span> | <a href="/nlab/show/diff/wave+equation" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/wave+equation" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/wave+equation" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/wave+equation/10" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(10 revisions)</span> | <a href="/nlab/show/diff/wave+equation" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/wave+equation" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
