--- a/pages/18512.html
+++ b/pages/18512.html
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -308,21 +308,343 @@ margin-left: 0em;
 
 
 <div id="revision">
-    <p>A <em>linear isomophism</em> is a <a class='existingWikiWord' href='/nlab/show/linear+map'>linear map</a> which is an <a class='existingWikiWord' href='/nlab/show/isomorphism'>isomorphism</a>, hence which has an <a class='existingWikiWord' href='/nlab/show/inverse+function'>inverse function</a> that is also a linear map.</p>
+    <div class='rightHandSide'>
+<div class='toc clickDown' tabindex='0'>
+<h3 id='context'>Context</h3>
+
+<h4 id='linear_algebra'>Linear algebra</h4>
+
+<div class='hide'>
+<p><strong><a class='existingWikiWord' href='/nlab/show/homotopy+theory'>homotopy theory</a>, <a class='existingWikiWord' href='/nlab/show/%28infinity%2C1%29-category+theory'>(∞,1)-category theory</a>, <a class='existingWikiWord' href='/nlab/show/homotopy+type+theory'>homotopy type theory</a></strong></p>
+
+<p>flavors: <a class='existingWikiWord' href='/nlab/show/stable+homotopy+theory'>stable</a>, <a class='existingWikiWord' href='/nlab/show/equivariant+homotopy+theory'>equivariant</a>, <a class='existingWikiWord' href='/nlab/show/rational+homotopy+theory'>rational</a>, <a class='existingWikiWord' href='/nlab/show/p-adic+homotopy+theory'>p-adic</a>, <a class='existingWikiWord' href='/nlab/show/proper+homotopy+theory'>proper</a>, <a class='existingWikiWord' href='/nlab/show/geometric+homotopy+type+theory'>geometric</a>, <a class='existingWikiWord' href='/nlab/show/cohesive+%28infinity%2C1%29-topos'>cohesive</a>, <a class='existingWikiWord' href='/nlab/show/directed+homotopy+theory'>directed</a>…</p>
+
+<p>models: <a class='existingWikiWord' href='/nlab/show/topological+homotopy+theory'>topological</a>, <a class='existingWikiWord' href='/nlab/show/simplicial+homotopy+theory'>simplicial</a>, <a class='existingWikiWord' href='/nlab/show/localic+homotopy+theory'>localic</a>, …</p>
+
+<p>see also <strong><a class='existingWikiWord' href='/nlab/show/algebraic+topology'>algebraic topology</a></strong></p>
+
+<p><strong>Introductions</strong></p>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Introduction+to+Topology+--+2'>Introduction to Basic Homotopy Theory</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Introduction+to+Homotopy+Theory'>Introduction to Abstract Homotopy Theory</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/geometry+of+physics+--+homotopy+types'>geometry of physics -- homotopy types</a></p>
+</li>
+</ul>
+
+<p><strong>Definitions</strong></p>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/homotopy'>homotopy</a>, <a class='existingWikiWord' href='/nlab/show/higher+homotopy'>higher homotopy</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/homotopy+type'>homotopy type</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Pi-algebra'>Pi-algebra</a>, <a class='existingWikiWord' href='/nlab/show/spherical+object'>spherical object and Pi(A)-algebra</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/homotopy+coherent+category+theory'>homotopy coherent category theory</a></p>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/homotopical+category'>homotopical category</a></p>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/model+category'>model category</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/category+of+fibrant+objects'>category of fibrant objects</a>, <a class='existingWikiWord' href='/nlab/show/cofibration+category'>cofibration category</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Waldhausen+category'>Waldhausen category</a></p>
+</li>
+</ul>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/homotopy+category'>homotopy category</a></p>
+
+<ul>
+<li><a class='existingWikiWord' href='/nlab/show/Ho%28Top%29'>Ho(Top)</a></li>
+</ul>
+</li>
+</ul>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/%28infinity%2C1%29-category'>(∞,1)-category</a></p>
+
+<ul>
+<li><a class='existingWikiWord' href='/nlab/show/homotopy+category+of+an+%28infinity%2C1%29-category'>homotopy category of an (∞,1)-category</a></li>
+</ul>
+</li>
+</ul>
+
+<p><strong>Paths and cylinders</strong></p>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/homotopy'>left homotopy</a></p>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/cylinder+object'>cylinder object</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/mapping+cone'>mapping cone</a></p>
+</li>
+</ul>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/homotopy'>right homotopy</a></p>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/path+space+object'>path object</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/mapping+cocone'>mapping cocone</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/generalized+universal+bundle'>universal bundle</a></p>
+</li>
+</ul>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/interval+object'>interval object</a></p>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/homotopy+localization'>homotopy localization</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/infinitesimal+interval+object'>infinitesimal interval object</a></p>
+</li>
+</ul>
+</li>
+</ul>
+
+<p><strong>Homotopy groups</strong></p>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/homotopy+group'>homotopy group</a></p>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/fundamental+group'>fundamental group</a></p>
+
+<ul>
+<li><a class='existingWikiWord' href='/nlab/show/fundamental+group+of+a+topos'>fundamental group of a topos</a></li>
+</ul>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Brown-Grossman+homotopy+group'>Brown-Grossman homotopy group</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/categorical+homotopy+groups+in+an+%28infinity%2C1%29-topos'>categorical homotopy groups in an (∞,1)-topos</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/geometric+homotopy+groups+in+an+%28infinity%2C1%29-topos'>geometric homotopy groups in an (∞,1)-topos</a></p>
+</li>
+</ul>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/fundamental+infinity-groupoid'>fundamental ∞-groupoid</a></p>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/fundamental+groupoid'>fundamental groupoid</a></p>
+
+<ul>
+<li><a class='existingWikiWord' href='/nlab/show/path+groupoid'>path groupoid</a></li>
+</ul>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/fundamental+infinity-groupoid+in+a+locally+infinity-connected+%28infinity%2C1%29-topos'>fundamental ∞-groupoid in a locally ∞-connected (∞,1)-topos</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/fundamental+infinity-groupoid+of+a+locally+infinity-connected+%28infinity%2C1%29-topos'>fundamental ∞-groupoid of a locally ∞-connected (∞,1)-topos</a></p>
+</li>
+</ul>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/fundamental+%28infinity%2C1%29-category'>fundamental (∞,1)-category</a></p>
+
+<ul>
+<li><a class='existingWikiWord' href='/nlab/show/fundamental+category'>fundamental category</a></li>
+</ul>
+</li>
+</ul>
+
+<p><strong>Basic facts</strong></p>
+
+<ul>
+<li><a class='existingWikiWord' href='/nlab/show/fundamental+group+of+the+circle+is+the+integers'>fundamental group of the circle is the integers</a></li>
+</ul>
+
+<p><strong>Theorems</strong></p>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/fundamental+theorem+of+covering+spaces'>fundamental theorem of covering spaces</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Freudenthal+suspension+theorem'>Freudenthal suspension theorem</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Blakers-Massey+theorem'>Blakers-Massey theorem</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/higher+homotopy+van+Kampen+theorem'>higher homotopy van Kampen theorem</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/nerve+theorem'>nerve theorem</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Whitehead+theorem'>Whitehead&#39;s theorem</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Hurewicz+theorem'>Hurewicz theorem</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Galois+theory'>Galois theory</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/homotopy+hypothesis'>homotopy hypothesis</a>-theorem</p>
+</li>
+</ul>
+</div>
+
+<h4 id='equality_and_equivalence'>Equality and Equivalence</h4>
+
+<div class='hide'>
+<p><strong><a class='existingWikiWord' href='/nlab/show/equivalence'>equivalence</a></strong></p>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/equality'>equality</a> (<a class='existingWikiWord' href='/nlab/show/equality'>definitional</a>, <a class='existingWikiWord' href='/nlab/show/equality'>propositional</a>, <a class='existingWikiWord' href='/nlab/show/equality'>computational</a>, <a class='existingWikiWord' href='/nlab/show/judgmental+equality'>judgemental</a>, <a class='existingWikiWord' href='/nlab/show/equality'>extensional</a>, <a class='existingWikiWord' href='/nlab/show/equality'>intensional</a>, <a class='existingWikiWord' href='/nlab/show/decidable+equality'>decidable</a>)</p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/identity+type'>identity type</a>, <a class='existingWikiWord' href='/nlab/show/equivalence+in+homotopy+type+theory'>equivalence in homotopy type theory</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/isomorphism'>isomorphism</a>, <a class='existingWikiWord' href='/nlab/show/weak+equivalence'>weak equivalence</a>, <a class='existingWikiWord' href='/nlab/show/homotopy+equivalence'>homotopy equivalence</a>, <a class='existingWikiWord' href='/nlab/show/weak+homotopy+equivalence'>weak homotopy equivalence</a>, <a class='existingWikiWord' href='/nlab/show/equivalence+in+an+%28infinity%2C1%29-category'>equivalence in an (∞,1)-category</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/natural+equivalence'>natural equivalence</a>, <a class='existingWikiWord' href='/nlab/show/natural+isomorphism'>natural isomorphism</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/gauge+transformation'>gauge equivalence</a></p>
+</li>
+
+<li>
+<p><strong>Examples.</strong></p>
+
+<ul>
+<li><a class='existingWikiWord' href='/nlab/show/equivalence+of+categories'>equivalence of categories</a>, <a class='existingWikiWord' href='/nlab/show/adjoint+equivalence'>adjoint equivalence</a>, <a class='existingWikiWord' href='/nlab/show/weak+equivalence+of+internal+categories'>weak equivalence of internal categories</a>, <a class='existingWikiWord' href='/nlab/show/Morita+equivalence'>Morita equivalence</a>, <a class='existingWikiWord' href='/nlab/show/equivalence+of+2-categories'>equivalence of 2-categories</a>, <a class='existingWikiWord' href='/nlab/show/equivalence+of+%28infinity%2C1%29-categories'>equivalence of (∞,1)-categories</a></li>
+</ul>
+</li>
+</ul>
+
+<p><strong><a class='existingWikiWord' href='/nlab/show/principle+of+equivalence'>principle of equivalence</a></strong></p>
+
+<ul>
+<li><a class='existingWikiWord' href='/nlab/show/univalence+axiom'>univalence</a></li>
+</ul>
+
+<p><strong><a class='existingWikiWord' href='/nlab/show/equation'>equation</a></strong></p>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/pullback'>fiber product</a>, <a class='existingWikiWord' href='/nlab/show/pullback'>pullback</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/homotopy+pullback'>homotopy pullback</a></p>
+</li>
+
+<li>
+<p><strong>Examples.</strong></p>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/linear+equation'>linear equation</a>, <a class='existingWikiWord' href='/nlab/show/differential+equation'>differential equation</a>, <a class='existingWikiWord' href='/nlab/show/ordinary+differential+equation'>ordinary differential equation</a>, <a class='existingWikiWord' href='/nlab/show/critical+point'>critical locus</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Euler-Lagrange+equation'>Euler-Lagrange equation</a>, <a class='existingWikiWord' href='/nlab/show/Einstein+equation'>Einstein equation</a>, <a class='existingWikiWord' href='/nlab/show/wave+equation'>wave equation</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Schr%C3%B6dinger+equation'>Schrödinger equation</a>, <a class='existingWikiWord' href='/nlab/show/Knizhnik-Zamolodchikov+equation'>Knizhnik-Zamolodchikov equation</a>, <a class='existingWikiWord' href='/nlab/show/Maurer-Cartan+equation'>Maurer-Cartan equation</a>, <a class='existingWikiWord' href='/nlab/show/quantum+master+equation'>quantum master equation</a>, <a class='existingWikiWord' href='/nlab/show/Euler-Arnold+equation'>Euler-Arnold equation</a>, <a class='existingWikiWord' href='/nlab/show/Fuchsian+equation'>Fuchsian equation</a>, <a class='existingWikiWord' href='/nlab/show/Fokker-Planck+equation'>Fokker-Planck equation</a>, <a class='existingWikiWord' href='/nlab/show/Lax+equation'>Lax equation</a></p>
+</li>
+</ul>
+</li>
+</ul>
+<div>
+<p>
+  <a href='/nlab/edit/equality+and+equivalence+-+contents'>Edit this sidebar</a>
+</p>
+</div></div>
+</div>
+</div>
+
+<p>A <em>linear isomophism</em> is a <a class='existingWikiWord' href='/nlab/show/linear+map'>linear map</a> which is an <a class='existingWikiWord' href='/nlab/show/isomorphism'>isomorphism</a>, hence which has an <a class='existingWikiWord' href='/nlab/show/inverse+function'>inverse function</a> that is also a linear map.</p>
 
 <p>
 </p>
 </div>
 
 <div class="revisedby">
-  Created on August  3, 2017 03:35:10 
+  Revised on October 23, 2017 15:07:28 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (94.220.75.2)
+  (188.109.127.172)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/linear+isomorphism" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
+  <a href="/nlab/edit/linear+isomorphism" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/linear+isomorphism/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/linear+isomorphism" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/linear+isomorphism" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
